--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Rubik+Dirt&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Quicksand:wght@300..700&family=Rubik+Dirt&display=swap" rel="stylesheet">
     <title>Martin Brusco | Desarrollo Web Front-End</title>
 </head>
 <body>
@@ -38,10 +42,10 @@
                 <img src="imagenes/person-lines-fill.svg" width="50" alt="Logo de la página web">
             </a>
             <ul class="navbar-nav d-flex justify-content-center align-items-center">
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Sobre mí</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Proyectos</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#sobre-mi">Sobre mí</a></li>
+              <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
               <li class="nav-item"><a class="nav-link disabled" aria-disabled="true">Testimonios</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contactos</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contacto">Contactos</a></li>
             </ul>
           </div>
         </div>
@@ -63,7 +67,7 @@
     </section>
 
     <!-- SOBRE MI -->
-    <section class="sobre-mi seccion-oscura">
+    <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Sobre mí</h2>
         <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et mauris in tortor finibus cursus nec ut diam. Praesent pretium felis id lacus pulvinar ultrices. Pellentesque sed turpis nec odio pretium dapibus. Vestibulum ac eleifend mauris. Sed laoreet mauris ac condimentum cursus. Phasellus sed purus malesuada, suscipit mauris vitae, vehicula dolor. Suspendisse sagittis lectus ac nisl convallis, faucibus porta diam ultricies. Fusce nec lectus pellentesque, gravida nunc non, sollicitudin elit. Cras ac sodales lorem. Ut eget lobortis arcu. Fusce condimentum erat vitae urna feugiat, sit amet sodales turpis malesuada. Nullam nec justo hendrerit, feugiat mi a, pellentesque mi. Suspendisse potenti. Pellentesque vitae scelerisque risus. Proin sagittis odio lacus, ac elementum erat vehicula vitae. Nam a tempus risus. </p>
@@ -116,7 +120,7 @@
     </section>
 
     <!-- PROYECTOS -->
-    <section class="proyectos-recientes seccion-clara d-flex flex-column">
+    <section id="proyectos"class="proyectos-recientes seccion-clara d-flex flex-column">
       <h2 class="seccion-titulo texto-negro" >Proyectos recientes</h2>
       <h3 class="seccion-descripcion">Estos son algunos de mis proyectos</h3>
 
@@ -269,8 +273,90 @@
     </section>
 
     <!-- TESTIMONIOS -->
-     
+    <!--
+    <section class="testimonios seccion-clara">
+      <h2 class="seccion-titulo">Testimonios</h2>
+      <h3 class="seccion-descripcion">Estos son algunos de ellos </h3>
+-->
+      <!-- CARRUSEL -->
+       <!--
+       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/servidores_rack.webp" class="d-block w-100 img-fluid" alt="testimonio 1">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/proyectos.jpg" class="d-block w-100 img-fluid" alt="testimonio 2">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/images.jpg" class="d-block w-100 img-fluid" alt="testimonio 3">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
+
+    </section>  -->
+
+    <!-- CONTACTO -->
+    <section id="contacto"class="contacto seccion-oscura">
+      <div class="container">
+        <div class="container text-center rectangulo d-flex justify-content-evenly">
+          <div class="row">
+            <div class="col-12 col-md-4 seccion-titulo">
+              ¡Cuentamelo todo!
+            </div>
+            <div class="col-12 col-md-4 descripcion">
+              ¡Contactame para iniciar el proyecto y lo haremos realidad!
+            </div>
+            <div class="col-12 col-md-4 ">
+              <a href="mailto:mambrusco@gmail.com">
+                <button type="button">
+                   Contato <i class="bi bi-envelope-check-fill"></i>
+                </button>
+
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PIE DE PAGINA -->
+     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+      <img class="footer-logo" src="imagenes/person-lines-fill.svg" alt="icono portafolios">
+      <p class="footer-texto text-center">Aprendo y creo todos los dias.<br>Creemos un proyecto juntos</p>
+      <div class="iconos-redes-sociales d-flex flex-wrap justify-content-cente">
+        <a href="www.x.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-twitter-x"></i>
+        </a>
+        <a href="www.facebook.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-facebook"></i>
+        </a>
+
+        <a href="www.linkedin.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-linkedin"></i>
+        </a>
+
+        <a href="www.github.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="mailto:mambrusco@gmail.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-envelope"></i>
+        </a>
+        <a href="www.instagram.com" target="_blank" rel="noopener noreferrer">
+          <i class="bi bi-instagram"></i>
+        </a>
+      </div>
+      <div class="derechos-autor">Creado por Martin Brusco (2025) &#169;</div>
+     </footer>
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-  </html>
+</html>
